# marketsync-app

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/services/: ai_service.py  data_service.py
